<resources>
    <string name="app_name">MultiplasTelas</string>
    <string name="Login">Login</string>
    <string name="Cadastro">Cadastro</string>
    <string name="Sobre">Sobre</string>
    <string name="HOME">HOME</string>
    <string name="Nome">Nome</string>
    <string name="NomeCompleto">Nome completo</string>
    <string name="Usuario">Usuário</string>
    <string name="Senha">Senha</string>

    <string name="icone">Icone De Usuario</string>
    <string name="voltar">Voltar</string>
    <string name="Logar">Logar</string>

    <string name="editar">Editar</string>
    <string name="UFMS">UFMS</string>
    <string name="githubH">GitHub: Higor335</string>
    <string name="githubJ">GitHub: Jose-115</string>
    <string name="editarSobre">Editar o sobre</string>
    <string name="TextoSobre">Criadores: Higor Vital e José Leonardo. Estudantes do curso Sistemas de Informação na UFMS.</string>
</resources>