<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100sp"
        android:layout_marginBottom="50sp"
        android:gravity="center"
        android:text="@string/HOME"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="45dp"
        android:padding="20dp"
        android:text="@string/Login"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:cornerRadius="35dp" />

    <Button
        android:id="@+id/btCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="45dp"
        android:padding="20dp"
        android:text="@string/Cadastro"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:cornerRadius="35dp" />

    <Button
        android:id="@+id/btSobre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="45dp"
        android:padding="20dp"
        android:text="@string/Sobre"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:cornerRadius="35dp" />

</LinearLayout>