<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvSobre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:layout_marginBottom="10sp"
        android:gravity="center"
        android:text="@string/Login"
        android:textSize="38sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        app:srcCompat="@drawable/user" />

    <EditText
        android:id="@+id/tvNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:text="Nome" />

    <EditText
        android:id="@+id/tvSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:padding="20dp"
        android:text="Senha" />

    <Button
        android:id="@+id/btLogar"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="75dp"
        android:padding="15dp"
        android:text="@string/Logar"
        android:textSize="16sp"
        app:cornerRadius="30dp" />

    <Button
        android:id="@+id/btVoltar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="#CAC5C5"
        android:text="@string/voltar"
        android:textColor="#000000"
        android:textSize="12sp" />

</LinearLayout>