<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvSobre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text="@string/Cadastro"
        android:textSize="38sp" />

    <EditText
        android:id="@+id/tvUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:text="@string/Usuario" />

    <EditText
        android:id="@+id/tvSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:padding="20dp"
        android:text="@string/Senha" />

    <EditText
        android:id="@+id/tvNome3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:text="@string/NomeCompleto" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/tvSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="-5dp"
            android:text="Sexo:"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbHomem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-10dp"
            android:checked="true"
            android:text="Homem"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rbMulher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Mulher"
            android:textSize="16sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:text="Data de nascimento:"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:inputType="date"
        android:text="Ex: 01/01/2001" />

    <TextView
        android:id="@+id/tvTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:text="Telefone:"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/tvTelefone2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="15dp"
        android:ems="10"
        android:inputType="phone"
        android:text="Ex: (67)9999-9999" />

    <Button
        android:id="@+id/btCad"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:text="Cadastrar"
        android:textSize="16sp"
        app:cornerRadius="30dp" />

    <Button
        android:id="@+id/btVoltar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#CAC5C5"
        android:text="@string/voltar"
        android:textColor="#000000"
        android:textSize="12sp" />

</LinearLayout>